force-app/main/default/objects/vlocity_ps__VersionAwareObjectRelationship__mdt/fields/vlocity_ps__DestinationIdKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DestinationIdKey__c</fullName>
    <description>This key is used with Many to Many Relationship to query on junction objects.</description>
    <label>Destination Identifier Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>