force-app/main/default/objects/vlocity_ps__VersionAwareObjectRelationship__mdt/fields/vlocity_ps__RelationshipName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RelationshipName__c</fullName>
    <description>This key specifies the relationship name in case of One to Many and Many to One relationship and is required for these relationship types.</description>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>