force-app/main/default/objects/vlocity_ps__VersionAwareObjectRelationship__mdt/fields/vlocity_ps__RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RelationshipType__c</fullName>
    <description>This picklist contains relationship types, e.g. One to Many, Many to One, Many to Many and Child Products from Datastore.</description>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One to Many</fullName>
                <default>true</default>
                <label>One to Many</label>
            </value>
            <value>
                <fullName>Many to One</fullName>
            </value>
            <value>
                <fullName>Many to Many</fullName>
            </value>
            <value>
                <fullName>Child Products from Datastore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>