force-app/main/default/objects/vlocity_ps__VersionAwareObjectRelationship__mdt/fields/vlocity_ps__SourceObject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SourceObject__c</fullName>
    <description>This is the source object of the relationship query.</description>
    <label>Source Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>